# rlmolecule

./: .gitattributes  .gitignore  .gitmodules  .lgtm.yml  MANIFEST.in  README.md  az_training_development.ipynb  examples.ipynb  gnn_demo.ipynb  mcts.ipynb  molecule_builder.py  pyproject.toml  setup.cfg  setup.py
alphazero/: README.md  alpha_zero_game.py  alphazero_node.py  config.py  game.py  graph_node.py  mcts.py  mod.py  mol_preprocessor.py  molecule.py  molecule_filters.py  molecule_game.py  molecule_policy.py  networkx_node_memoizer.py  node.py  policy.py  policy_data.py  preprocessor.json  preprocessor.py
command_line_tools/: __init__.py  command_line_config.py  run_tools.py
devtools/: readme.md
docs/: conf.py  examples.rst  index.rst  install.rst  overview.rst  rlmolecule.rst
example_slurm_scripts/: README.md  gaussian_runner.py  split_gpus.sh  split_nodes.sh
examples/: run_config.py
molecule_builder/: README.md  alphazero.py  config.py  examples.ipynb  game.pickle  game_0  game_0.pickle  game_1  game_1.pickle  game_3.pickle  game_4.pickle  game_5.pickle  game_6.pickle  game_7.pickle  game_8.pickle  game_9.pickle  gpu_submit.sh  mcts.ipynb  molecule_builder.py  molecule_environment.yml  multipe_workers.sh  network.py  postgresql_example.ipynb  psycopg2_example.py  rollout.py  run_experiment.md  run_rollout_workers.sh  training.py  training_tf.py
molecule_game/: config.py  mol_preprocessor.py  molecule_config.py  molecule_node.py  molecule_policy.py  molecule_tools.py  policy_data.py
molecule_graph/: molecule_node.py  molecule_tools.py
q2_rl_milestone/: run_mcts.py  similarity_score_example.ipynb  tf2_cpu.yml
redis_integration_example/: README.md  (+7 more)
(+529 files in other folders)
