[metadata]
name = rlmolecule
version = attr: src.VERSION
description =  Reinforcement learning for molecular optimization
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
packages = find:
install_requires =
  graphenv
  tensorflow
  ray[tune,rllib]
  nfp
  diskcache

[versioneer]
VCS = git
style = pep440
versionfile_source = rlmolecule/_version.py
versionfile_build = rlmolecule/_version.py
tag_prefix = ''


[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
# Omit the tests
    */tests/*
# Omit generated versioneer
    rlmolecule/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
max-line-length = 88
extend-ignore = E203