[metadata]
name = rlmolecule
description =  Reinforcement learning for molecular optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
packages = find:
include_package_data = true
install_requires =
  graphenv
  tensorflow
  lru-dict
  rdkit
  nfp
  
[options.extras_require]
dev =
  pytest
  alfabet
  pooch

[coverage:run]
omit =
    */tests/*
    rlmolecule/_version.py

[yapf]
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
max-line-length = 88
extend-ignore = E203
